<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">
    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context="com.example.weinner.liron.happygardener.AddPartActivity">

        <ImageView
            android:id="@+id/framelayout_background"
            android:layout_width="match_parent"
            app:layout_constraintTop_toTopOf="parent"
            android:scaleType="fitXY"
            android:layout_height="150dp"/>


        <android.support.v4.widget.NestedScrollView
            android:id="@+id/scrollView"
            android:scrollbars="vertical"
            app:layout_constraintTop_toBottomOf="@id/framelayout_background"
            app:layout_constraintBottom_toBottomOf="parent"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_margin="@dimen/fab_margin">

            <android.support.constraint.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@drawable/customer_form">

                <TextView
                    android:id="@+id/textView_part_details"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:layout_constraintTop_toTopOf="parent"
                    android:layout_marginTop="10dp"
                    android:fontFamily="@font/heebo_bold"
                    android:text="@string/part_details"
                    android:textAlignment="center" />

                <View
                    android:id="@+id/frameLayout"
                    android:layout_width="match_parent"
                    android:layout_height="5dp"
                    app:layout_constraintTop_toBottomOf="@+id/textView_part_details"
                    android:layout_marginTop="@dimen/customer_margin_small"
                    android:background="@color/light_grey"/>

                <TextView
                    android:id="@+id/textView_part_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:layout_constraintTop_toBottomOf="@id/frameLayout"
                    android:layout_marginTop="@dimen/customer_margin_small"
                    android:text="@string/part_s_name"
                    android:textAlignment="center"
                    android:textStyle="bold" />

                <EditText
                    android:id="@+id/editText_part_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:layout_constraintTop_toBottomOf="@+id/textView_part_name"
                    android:layout_marginTop="@dimen/customer_margin_small"
                    android:layout_marginEnd="@dimen/customer_margin_end"
                    android:layout_marginStart="@dimen/customer_margin_start"
                    android:background="@drawable/edittext_shape"
                    android:hint="@string/hint_part_name"
                    android:inputType="text|textMultiLine"
                    android:textAlignment="viewStart" />

                <TextView
                    android:id="@+id/textView_part_price"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:layout_constraintTop_toBottomOf="@id/editText_part_name"
                    android:layout_marginTop="@dimen/customer_margin_big"
                    android:text="@string/parts_price_per_unit"
                    android:textAlignment="center"
                    android:textStyle="bold" />

                <EditText
                    android:id="@+id/editText_part_price"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:layout_constraintTop_toBottomOf="@+id/textView_part_price"
                    android:layout_marginTop="@dimen/customer_margin_small"
                    android:layout_marginEnd="@dimen/customer_margin_end"
                    android:layout_marginStart="@dimen/customer_margin_start"
                    android:background="@drawable/edittext_shape"
                    android:hint="@string/hint_part_price"
                    android:inputType="numberDecimal"
                    android:textAlignment="viewStart" />

                <TextView
                    android:id="@+id/textView_parts_picture"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/customer_margin_big"
                    android:text="@string/part_picture_text"
                    android:textAlignment="center"
                    android:textStyle="bold"
                    android:visibility="gone"
                    app:layout_constraintTop_toBottomOf="@id/editText_part_price" />

                <ImageButton
                    android:id="@+id/imageButton_parts_picture"
                    android:layout_width="80dp"
                    android:layout_height="80dp"
                    android:layout_marginTop="@dimen/customer_margin_small"
                    android:background="@drawable/ic_picture"
                    android:scaleType="centerCrop"
                    android:visibility="gone"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/textView_parts_picture" />

                <ProgressBar
                    android:id="@+id/progressBar"
                    android:layout_width="55dp"
                    android:layout_height="55dp"
                    android:indeterminateDrawable="@drawable/custom_progressbar"
                    android:visibility="gone"
                    app:layout_constraintBottom_toBottomOf="@id/imageButton_parts_picture"
                    app:layout_constraintEnd_toEndOf="@id/imageButton_parts_picture"
                    app:layout_constraintStart_toStartOf="@id/imageButton_parts_picture"
                    app:layout_constraintTop_toTopOf="@id/imageButton_parts_picture" />

                <android.support.design.widget.FloatingActionButton
                    android:id="@+id/fab_add_picture"
                    android:layout_width="25dp"
                    android:layout_height="25dp"
                    android:src="@drawable/ic_add"
                    android:tint="#ffffff"
                    android:visibility="gone"
                    app:backgroundTint="#ff40b3"
                    app:fabSize="mini"
                    app:layout_constraintEnd_toEndOf="@+id/imageButton_parts_picture"
                    app:layout_constraintTop_toTopOf="@+id/imageButton_parts_picture" />

                <android.support.design.widget.FloatingActionButton
                    android:id="@+id/fab_remove_picture"
                    android:layout_width="25dp"
                    android:layout_height="25dp"
                    android:src="@drawable/ic_delete"
                    android:tint="#ffffff"
                    android:visibility="gone"
                    app:backgroundTint="@color/my_red"
                    app:fabSize="mini"
                    app:layout_constraintBottom_toBottomOf="@+id/imageButton_parts_picture"
                    app:layout_constraintEnd_toEndOf="@+id/imageButton_parts_picture" />

                <Button
                    android:id="@+id/button_part_create"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/imageButton_parts_picture"
                    app:layout_constraintBottom_toBottomOf="parent"
                    android:layout_marginBottom="@dimen/customer_margin_big"
                    android:layout_marginStart="@dimen/button_create_update_margin_start"
                    android:layout_marginEnd="@dimen/button_create_update_margin_start"
                    android:layout_marginTop="@dimen/customer_margin_big"
                    android:background="@drawable/create_button_selector"
                    android:fontFamily="@font/heebo_bold"
                    android:text="@string/create_part"
                    />
            </android.support.constraint.ConstraintLayout>
        </android.support.v4.widget.NestedScrollView>
    </android.support.constraint.ConstraintLayout>
</layout>
